--- a/css-resources/Homepage-style-responsive-doc-theme.css
+++ b/css-resources/Homepage-style-responsive-doc-theme.css
@@ -9,7 +9,7 @@ height: 55px; margin-right: 25px;}
 @media only screen
 and (min-width: 690px) 
 and (max-width: 1280px){
-html, body{ overflow-x: hidden; -webkit-overflow-x: hidden; ms-overflow-x: hidden; -moz-overflow-x: hidden; -o-overflow-x: hidden;} header{ height: 80px;} .super-container-float-section{ width: 100%; height: 40px; max-width: 90%; display: flex;}
+html, body{ overflow-x: hidden; -webkit-overflow-x: hidden; -ms-overflow-x: hidden; -moz-overflow-x: hidden; -o-overflow-x: hidden;} header{ height: 80px;} .super-container-float-section{ width: 100%; height: 40px; max-width: 90%; display: flex;}
  .super-container-float-section .logo-website-section{ width: 100%;
 height: 40px; display: flex; align-items: center; }.super-container-float-section .logo-website-section .svg-brand-website{ width: 140px; height: 30px; transition: 0.4s ease;}
 .super-container-float-section .logo-website-section .svg-brand-website:hover{ opacity: 0.5; transition: 0.4s ease;} .super-container-float-section .burger-toggle-button{ width: 27px; height: 26px; display: block;
@@ -58,7 +58,7 @@ width: 170px; height: 47px;}
 @media only screen
 and (min-width: 300px) 
 and (max-width: 690px){
-html, body{ overflow-x: hidden; -webkit-overflow-x: hidden; ms-overflow-x: hidden; -moz-overflow-x: hidden; -o-overflow-x: hidden;} header{ height: 60px;} .super-container-float-section{ width: 100%; height: 40px; max-width: 90%; display: flex;} .super-container-float-section .logo-website-section{ width: 100%;
+html, body{ overflow-x: hidden; -webkit-overflow-x: hidden; -ms-overflow-x: hidden; -moz-overflow-x: hidden; -o-overflow-x: hidden;} header{ height: 60px;} .super-container-float-section{ width: 100%; height: 40px; max-width: 90%; display: flex;} .super-container-float-section .logo-website-section{ width: 100%;
 height: 40px; display: flex; align-items: center;}.super-container-float-section .logo-website-section .svg-brand-website{ width: 140px; height: 30px; transition: 0.4s ease;}
 .super-container-float-section .logo-website-section .svg-brand-website:hover{ opacity: 0.5; transition: 0.4s ease;}.super-container-float-section .burger-toggle-button{ width: 27px; height: 26px; display: block;
 background: transparent; position: absolute; right: 5%; border: none; z-index: 8; cursor: pointer;} .super-container-float-section .burger-toggle-button .burger-icon-open-close{ width: 27px; height: 2px; position: absolute;
